# solana-curriculum

./: .devcontainer.json  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  LICENSE  README.md  freecodecamp.conf.json  package-lock.json  package.json
.devcontainer/: devcontainer.json
.freeCodeCamp/: Dockerfile  freecodecamp.conf.json  package-lock.json  package.json  webpack.config.cjs
.freeCodeCamp/bash/: .bashrc  sourcerer.sh
.freeCodeCamp/client/: index.tsx
.freeCodeCamp/config/: projects.json  state.json
.freeCodeCamp/tooling/: .bashrc  client-socks.js  env.js  hot-reload.js  lesson.js  seed.js  server.js  t.js  test-utils.js  test.js  utils.js
.github/ISSUE_TEMPLATE/: BUG.md
bash/: .bashrc
build-a-client-side-app/: .gitignore  mess.json  mess.ts
build-a-smart-contract/: package-lock.json  package.json  wallet.json
build-a-smart-contract/program/: Cargo.toml
build-a-university-certification-nft/: index.d.ts  package-lock.json  package.json  server.js  utils.js
build-a-university-certification-nft/_answer/: index.d.ts  index.js  package.json  server.js  solana-university-wallet.json  t.js  utils.js
build-a-university-certification-nft/client/: index.html  package-lock.json  package.json  vite.config.ts
build-an-anchor-leaderboard/rock-destroyer/: .env  Anchor.toml
config/: projects.json  state.json
curriculum/: nfts-on-solana.md
learn-anchor-by-building-tic-tac-toe-part-1/_answer/at/programs/at/: Cargo.toml
learn-anchor-by-building-tic-tac-toe-part-1/_answer/at/programs/at/src/: lib.rs
learn-anchor-by-building-tic-tac-toe-part-2/tic-tac-toe/: Anchor.toml
learn-how-to-build-a-client-side-app-part-1/tic-tac-toe/: Anchor.toml  package.json  player-two.json
learn-how-to-build-a-client-side-app-part-2/: tic_tac_toe.ts
learn-how-to-build-a-client-side-app-part-2/app/: index.js  package.json  wallet.js  web3.js
learn-how-to-get-off-localhost/_answer/programs/todo/: Cargo.toml
learn-how-to-get-off-localhost/_answer/programs/todo/src/: lib.rs
learn-how-to-interact-with-an-on-chain-program/: package.json
learn-how-to-interact-with-on-chain-programs/: package-lock.json  package.json
learn-how-to-interact-with-on-chain-programs/src/program-rust/: Cargo.toml
learn-how-to-interact-with-on-chain-programs/src/program-rust/src/: lib.rs
learn-how-to-set-up-solana-by-building-a-hello-world-smart-contract/: package-lock.json  package.json
learn-how-to-set-up-solana-by-building-a-hello-world-smart-contract/_answer/src/program-rust/: Cargo.toml
learn-how-to-set-up-solana-by-building-hello-world/: index.js  package.json
learn-how-to-set-up-solana-by-building-hello-world/src/program-rust/: Cargo.toml
learn-solanas-token-program-by-minting-a-fungible-token/: package.json  utils.js
learn-the-metaplex-sdk-by-minting-an-nft/: package.json  server.js  utils.js
tooling/: camper-info.js  helpers.js  rejig.js  seed.js
(+170 files in other folders)
