
[package]
name = "solana-sbf-helloworld"
version = "0.0.1"
description = "Hello World program written in Rust"
authors = [
  "Solana Maintainers <maintainers@solana.com>",
  "Shaun Hamilton <shauhami020@gmail.com>",
]
repository = "https://github.com/freeCodeCamp/solana-curriculum"
license = "Apache-2.0"
homepage = "https://web3.freecodecamp.org/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.3"
borsh-derive = "0.10.3"
solana-program = "1.16.0"

[dev-dependencies]
solana-sdk = "1.16.1"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
