
[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Hello World program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>", "Shaun Hamilton <shauhami020@gmail.com>"]
repository = "https://github.com/freeCodeCamp/solana-curriculum"
license = "Apache-2.0"
homepage = "https://web3.freecodecamp.org/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.11.4"

[dev-dependencies]
solana-program-test = "1.11.4"
solana-sdk = "~1.11.4"

[lib]
name = "helloworld"
crate-type = ["cdylib", "lib"]
