[package]
name = "todo"
version = "0.1.0"
description = "A todo list program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "todo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
